Fix look, add delete experience, no wrap on navigation

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -87,6 +87,8 @@
     font-family: "Berlingske Sans Bold";
     margin-left: 0px;
     transition: margin 0.3s ease;
+
+    white-space: nowrap;
   }
 
   box-shadow: inset 0 0 0 0 $primary-color;
